<resources>
    <string name="app_name" translatable="false">Locus</string>
    <string name="notificationChannelId" translatable="false">SocialGatewayChannelId</string>
    <string name="serverUrlPath" translatable="false">https://hpi.de/baudisch/projects/neo4j/api</string>

    <string name="X_was_not_found_on_your_device">%1$s was not found on your device</string>
    <string name="start_recording">start recording</string>
    <string name="type_answer_here_or_record_audio">type answer here</string>
    <string name="stop_recording">stop recording</string>
    <string name="delete_recording">delete recording</string>
    <string name="a_social_media_app_icon">a social media app icon</string>
    <string name="reflection_question">Reflection Question</string>
    <string name="channel_name">SocialGateway Notification Channel</string>
    <string name="channel_description">Ask reflection questions some time after a social media app was started.</string>
    <string name="requesting_question_from_server">requesting question from server…</string>
    <string name="server_unreachable">server unreachable</string>
    <string name="check_in_question_value">When you think about how you used your smartphone today, how do you feel?</string>
    <string name="no_internet_connection_available">no internet connection available</string>
    <string name="unknown_error">unknown error</string>
    <string name="voice_recorder">voice recorder</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="grant_access">Grant Access to Locus</string>
    <string name="ema_question1" translatable="false">1. What was the last social media platform you used today?</string>
    <string name="type_your_answer" translatable="false">type your answer</string>
    <string name="ema_question2" translatable="false">2. What were you doing/looking at?</string>
    <string name="ema_question3" translatable="false">3. Which feelings did you feel most strongly during this social media session?</string>
    <string name="ema_question4" translatable="false">4. What made you feel this way?</string>
    <string name="ema_question5" translatable="false">5. How much did you feel in or out of control while using this social media platform? (1 less in control, 5 more in control)</string>
    <string name="first_prompt_of_the_day" translatable="false">What is your goal for social media today?</string>
</resources>
