<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayoutCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/eam_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ema_question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ema_question1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ema_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/type_your_answer"
                android:inputType="textCapSentences|textAutoCorrect"
                android:minHeight="48dp"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ema_question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ema_question2"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ema_answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/type_your_answer"
                android:inputType="textCapSentences|textAutoCorrect"
                android:minHeight="48dp"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>